fix: Try not to display video on mobile

--- a/client/components/header/video-background.styl
+++ b/client/components/header/video-background.styl
@@ -10,3 +10,5 @@
   transform translateX(-50%) translateY(-50%)
   width auto
   z-index -100
+  +$below('sm')
+    display: none
